[project]
name = "schematic-dagster"
version = "0.1.0"
description = "Schematic Dagster"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Dagster dependencies
    # "dagster==1.9.13",
    "dagster==1.10.1",
    "dagster-postgres",
    "dagster-k8s",
    "dagster-graphql",
    "dagster-webserver",
]
